update nodemon dev add svg and create and getone softSkill
