# app/src/swagger/swagger.json
@@ -46,15 +46,15 @@
     },
     "/admin/info/{field}": {
       "patch": {
-        "summary":"update simple filds in info Doc",
-        "tags":["admin"],
+        "summary": "update simple filds in info Doc",
+        "tags": ["admin"],
         "parameters": [
           {
             "name": "field",
             "in": "path",
             "description": "field name for entity",
             "required": true,
-            "example":"contact_email"
+            "example": "contact_email"
           }
         ],
         "requestBody": {
@@ -64,7 +64,7 @@
                 "type": "object",
                 "properties": {
                   "value": {
-                    "type":"string",
+                    "type": "string",
                     "example": "newEmail@gmail.com",
                     "required": true
                   }
@@ -73,22 +73,22 @@
             }
           }
         },
-        "responses":{
+        "responses": {
           "201": {
             "description": "CREATED",
             "content": {
               "application/json": {
-                "schema":{
-                  "$ref":"#/components/schemas/patchInfoField"
+                "schema": {
+                  "$ref": "#/components/schemas/patchInfoField"
                 }
               }
             }
           },
           "422": {
             "description": "UNPROCCESSABLE ENTITY",
-            "content":{
-              "application/json":{
-                "schema":{
+            "content": {
+              "application/json": {
+                "schema": {
                   "$ref": "#/components/schemas/unprocessable_entity"
                 }
               }
@@ -97,24 +97,24 @@
         }
       }
     },
-    "/admin/info/{lenguage}/{field}": {
-      "patch":{
+    "/admin/info/{language}/{field}": {
+      "patch": {
         "description": "update multilanguges fields",
-        "tags":["admin"],
-        "parameters":[
+        "tags": ["admin"],
+        "parameters": [
           {
             "name": "language",
             "in": "path",
             "description": "length of entity",
             "required": true,
-            "example":"en"
+            "example": "en"
           },
           {
             "name": "field",
             "in": "path",
             "description": "field name for entity",
             "required": true,
-            "example":"about"
+            "example": "about"
           }
         ],
 
@@ -125,7 +125,7 @@
                 "type": "object",
                 "properties": {
                   "value": {
-                    "type":"string",
+                    "type": "string",
                     "example": "some new text ebout you",
                     "required": true
                   }
@@ -135,22 +135,22 @@
           }
         },
 
-        "responses":{
+        "responses": {
           "201": {
             "description": "CREATED",
             "content": {
               "application/json": {
-                "schema":{
-                  "$ref":"#/components/schemas/patchMultilangInfoField"
+                "schema": {
+                  "$ref": "#/components/schemas/patchMultilangInfoField"
                 }
               }
             }
           },
           "422": {
             "description": "UNPROCCESSABLE ENTITY",
-            "content":{
-              "application/json":{
-                "schema":{
+            "content": {
+              "application/json": {
+                "schema": {
                   "$ref": "#/components/schemas/unprocessable_entity"
                 }
               }
@@ -164,7 +164,7 @@
         "sumarry": "update image for avatar",
         "tags": ["admin"],
         "requestBody": {
-          "content":{
+          "content": {
             "multipart/form-data": {
               "schema": {
                 "type": "object",
@@ -182,17 +182,17 @@
         "responses": {
           "201": {
             "description": "File uploaded successfully",
-            "content":{
-              "application/json":{
-                "schema":{
+            "content": {
+              "application/json": {
+                "schema": {
                   "type": "object",
-                  "properties":{
+                  "properties": {
                     "status": {
                       "type": "integer",
                       "format": "int32",
                       "example": 201
                     },
-                    "data":{
+                    "data": {
                       "type": "object",
                       "properties": {
                         "url": {
@@ -206,8 +206,197 @@
               }
             }
           },
-           "400": {
+          "400": {
             "description": "Bad Request, for example missing file"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/admin/files/icons": {
+      "post": {
+        "sumarry": "add svg icons",
+        "tags": ["admin"],
+        "requestBody": {
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "icons": {
+                    "type": "array",
+                    "items": {
+                      "type": "string",
+                      "format": "binary"
+                    }
+                  }
+                },
+                "required": ["icons"]
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Files uploaded successfully",
+            "content": {
+              "application/json": {
+                "type": "object",
+                "properties": {
+                  "status": {
+                    "type": "integer",
+                    "format": "int32",
+                    "example": 201
+                  },
+                  "data": {
+                    "type": "array",
+                    "items": {
+                      "type": "object",
+                      "properties": {
+                        "_id": {
+                          "type": "string",
+                          "pattern": "^[a-fA-F0-9]{24}$",
+                          "example": "507f1f77bcf86cd799439011"
+                        },
+                        "name": {
+                          "type": "string",
+                          "example": "1741696598644_smile1.svg"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request, for example missing file"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/admin/softSkills/{id}/{languge}": {
+      "get": {
+        "summary": "get soft skill",
+        "description": "get one soft skill",
+        "tags": ["admin"],
+        "responses": {
+          "404": {
+            "content": {
+              "application/json": {
+                "type": "object",
+                "properties": {
+                  "status": {
+                    "type": "integer",
+                    "format": "int32",
+                    "example": 200
+                  },
+                  "data": {
+                    "type": "object",
+                    "properties": {
+                      "_id": {
+                        "type": "string",
+                        "pattern": "^[a-fA-F0-9]{24}$",
+                        "example": "507f1f77bcf86cd799439011"
+                      },
+                      "icon": {
+                        "type": "string",
+                        "pattern": "^[a-fA-F0-9]{24}$",
+                        "example": "507f1f77bcf86cd799439011"
+                      },
+                      "createdAt": "2025-03-13T20:13:44.671Z",
+                      "updatedAt": "2025-03-13T20:13:44.671Z",
+                      "__v": 0,
+                      "title": {
+                        "type": "string",
+                        "example": "Заголовак скіла"
+                      },
+                      "text": {
+                        "type": "string",
+                        "example": "Текст про скіл"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "422": {
+            "description": "UNPROCCESSABLE ENTITY",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/unprocessable_entity"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/admin/softSkills": {
+      "post": {
+        "summary": "upsert soft skill",
+        "description": "upsert one soft skill",
+        "tags": ["admin"],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "$ref": "#/components/schemas/newSkillRequestBody"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "File uploaded successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "format": "int32",
+                      "example": 201
+                    },
+                    "data": {
+                      "type": "object",
+                      "properties": {
+                        "_id": {
+                          "type": "string",
+                          "pattern": "^[a-fA-F0-9]{24}$",
+                          "example": "67d42801b3c46edb0f7b5048"
+                        },
+                        "icon": {
+                          "type": "string",
+                          "pattern": "^[a-fA-F0-9]{24}$",
+                          "example": "67cf323c48b87d88e19b36bd"
+                        },
+                        "title": {
+                          "type": "string",
+                          "example": "Заголовак скіла"
+                        },
+                        "text": {
+                          "type": "string",
+                          "example": "Текст про скіл"
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal server error"
@@ -220,14 +409,8 @@
     "variables": {
       "def_en_text": "some text",
       "def_uk_text": "деякий текст",
-      "simple_field_enum":[
-        "contact_email",
-        "likedin",
-        "github",
-        "instagram",
-        "facebook",
-        "phone"
-      ]
+      "simple_field_enum": ["contact_email", "likedin", "github", "instagram", "facebook", "phone"],
+      "language": ["EN", "UK"]
     },
     "schemas": {
       "InfoResponse": {
@@ -322,9 +505,9 @@
         "type": "object",
         "properties": {
           "status": {
-            "type":"integer",
-          "format": "int32",
-          "example": 201
+            "type": "integer",
+            "format": "int32",
+            "example": 201
           },
           "data": {
             "type": "object",
@@ -345,9 +528,9 @@
         "type": "object",
         "properties": {
           "status": {
-            "type":"integer",
-          "format": "int32",
-          "example": 201
+            "type": "integer",
+            "format": "int32",
+            "example": 201
           },
           "data": {
             "type": "object",
@@ -379,7 +562,40 @@
           "status": 422,
           "name": "UNPROCESSABLE ENTITY",
           "message": "\"contact_email\" must be a valid email"
-      }
+        }
+      },
+      "newSkillRequestBody": {
+        "type": "object",
+        "properties": {
+          "language": {
+            "type": "string",
+            "enum": ["EN", "UK"],
+            "example": "EN"
+          },
+          "skill": {
+            "type": "object",
+            "properties": {
+              "_id": {
+                "type": "string",
+                "pattern": "^[a-fA-F0-9]{24}$",
+                "example": "507f1f77bcf86cd799439011"
+              },
+              "title": {
+                "type": "string",
+                "example": "Заголовак скіла"
+              },
+              "text": {
+                "type": "string",
+                "example": "Текст про скіл"
+              },
+              "icon": {
+                "type": "string",
+                "pattern": "^[a-fA-F0-9]{24}$",
+                "example": "507f1f77bcf86cd799439011"
+              }
+            }
+          }
+        }
       }
     }
   }
